force-app/main/default/objects/Stock_de_produit__c/Stock_de_produit__c.object-meta.xml
<CustomObject>
    <label>Stock de produit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stocks de produits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>