force-app/main/default/objects/Stock_de_produit__c/fields/Code_Article__c.field-meta.xml
<CustomField>
    <fullName>Code_Article__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code Article</label>
    <length>50</length>
    <type>Text</type>
</CustomField>