force-app/main/default/objects/Stock_de_produit__c/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Général</fullName>
            </value>
            <value>
                <fullName>SAV</fullName>
            </value>
            <value>
                <fullName>Rebut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>