force-app/main/default/objects/Stock_de_produit__c/fields/Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Prestataire__c</fullName>
    <label>Prestataire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cordon</fullName>
            </value>
            <value>
                <fullName>IMS</fullName>
            </value>
            <value>
                <fullName>OMWAVE</fullName>
            </value>
            <value>
                <fullName>TAMET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>