force-app/main/default/objects/Stock_de_produit__c/fields/Produit__c.field-meta.xml
<CustomField>
    <fullName>Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stocks de produits</relationshipLabel>
    <relationshipName>Stocks_de_produits</relationshipName>
    <type>Lookup</type>
</CustomField>