force-app/main/default/objects/Stock_de_produit__c/fields/Reference_produit__c.field-meta.xml
<CustomField>
    <fullName>Reference_produit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Référence produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>