force-app/main/default/objects/Stock_de_produit__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gestion des Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Stocks de produits</relationshipLabel>
    <relationshipName>Stocks_de_produits</relationshipName>
    <type>Lookup</type>
</CustomField>