force-app/main/default/objects/Stock_de_produit__c/fields/Valeur_du_stock__c.field-meta.xml
<CustomField>
    <fullName>Valeur_du_stock__c</fullName>
    <label>Valeur du stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>