force-app/main/default/objects/Stock_de_produit__c/validationRules/RV01_Produit_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV01_Produit_Obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.Bypass_validation_rules__c = false,
ISBLANK(Produit__c)
				)</errorConditionFormula>
    <errorMessage>Merci de renseigner le champ Produit</errorMessage>
</ValidationRule>