force-app/main/default/objects/Stock_de_produit__c/listViews/Cordon_G_n_ral.listView-meta.xml
<ListView>
    <fullName>Cordon_G_n_ral</fullName>
    <columns>NAME</columns>
    <columns>Code_Article__c</columns>
    <columns>Quantite__c</columns>
    <columns>Produit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prestataire__c</field>
        <operation>equals</operation>
        <value>Cordon</value>
    </filters>
    <filters>
        <field>Etat__c</field>
        <operation>equals</operation>
        <value>Général</value>
    </filters>
    <label>Cordon Général</label>
</ListView>