force-app/main/default/objects/Stock_de_produit__c/listViews/IMS_General.listView-meta.xml
<ListView>
    <fullName>IMS_General</fullName>
    <columns>NAME</columns>
    <columns>Code_Article__c</columns>
    <columns>Quantite__c</columns>
    <columns>Produit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prestataire__c</field>
        <operation>equals</operation>
        <value>IMS</value>
    </filters>
    <filters>
        <field>Etat__c</field>
        <operation>equals</operation>
        <value>Général</value>
    </filters>
    <label>IMS Général</label>
</ListView>