force-app/main/default/objects/Stock_de_produit__c/listViews/TAMET_Rebut.listView-meta.xml
<ListView>
    <fullName>TAMET_Rebut</fullName>
    <columns>NAME</columns>
    <columns>Code_Article__c</columns>
    <columns>Quantite__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Etat__c</field>
        <operation>equals</operation>
        <value>Rebut</value>
    </filters>
    <filters>
        <field>Prestataire__c</field>
        <operation>equals</operation>
        <value>TAMET</value>
    </filters>
    <label>TAMET Rebut</label>
</ListView>