force-app/main/default/objects/Stock_de_produit__c/listViews/Tous_les_Stocks_de_produits.listView-meta.xml
<ListView>
    <fullName>Tous_les_Stocks_de_produits</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Stock__c</columns>
    <columns>Quantite__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les Stocks de produits</label>
</ListView>